@@ -45,6 +45,7 @@ reportbug (4.1) unstable; urgency=low
     - make BTS query tree columns sortable
     - display report message in a dialog at the end, in substitution of pager and stdout
     - forward page when the user hits ENTER either on an entry or a menu
+    - respect given order in menus
     - ui focus and layout improvements
   * reportbug/ui/urwid_ui.py
     - fix default severity (to normal) in non-multiple menus; Closes: #496969
